--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -15,19 +15,11 @@ jobs:
       matrix:
         include:
         - os: ubuntu-latest
-          pybuilds: cp3{11,12}-manylinux_x86_64
+          pybuilds: cp3{10,11,12}-manylinux_x86_64
           arch: x86_64
           id: linux_x86_64
-        - os: ubuntu-24.04-arm
-          pybuilds: cp3{11,12}-manylinux_aarch64
-          arch: aarch64
-          id: linux_arm64
-        - os: macos-13
-          pybuilds: cp3{11,12}-macosx_x86_64
-          arch: x86_64
-          id: macos_x86
         - os: macos-15
-          pybuilds: cp3{11,12}-macosx_arm64
+          pybuilds: cp3{10,11,12}-macosx_arm64
           arch: arm64
           id: macos_arm64
     steps:
@@ -42,8 +34,29 @@ jobs:
           output-dir: wheelhouse
         env:
           CIBW_BUILD: ${{ matrix.pybuilds }}
-          CIBW_BEFORE_BUILD_MACOS: brew update && brew install cmake boost eigen wget git && git clone https://github.com/microsoft/vcpkg.git && ./vcpkg/bootstrap-vcpkg.sh && ./vcpkg/vcpkg install octomap && ./vcpkg/vcpkg install ompl 
-          CIBW_BEFORE_BUILD_LINUX: yum install -y curl zip tar unzip epel-release cmake make gcc-c++ bzip2 wget git zip unzip tar perl-IPC-Cmd autoconf libtool intltool automake autoconf-archive gettext && git clone https://github.com/microsoft/vcpkg.git && ./vcpkg/bootstrap-vcpkg.sh && ./vcpkg/vcpkg install octomap && ./vcpkg/vcpkg install ompl && rm -f /project/vcpkg/packages/ompl_x64-linux/lib/libompl.so && rm -f /project/vcpkg/packages/ompl_x64-linux/lib/libompl.so.18 && cp /project/vcpkg/packages/ompl_x64-linux/lib/libompl.so.1.7.0 /project/vcpkg/packages/ompl_x64-linux/lib/libompl.so.18 && cp /project/vcpkg/packages/ompl_x64-linux/lib/libompl.so.1.7.0 /project/vcpkg/packages/ompl_x64-linux/lib/libompl.so.18
+          CIBW_BEFORE_BUILD_MACOS: |
+            brew update 
+            brew install cmake boost eigen wget git
+            git clone https://github.com/microsoft/vcpkg.git
+            ./vcpkg/bootstrap-vcpkg.sh
+            ./vcpkg/vcpkg install octomap
+            ./vcpkg/vcpkg install ompl
+            unlink /Users/runner/work/path-finding/path-finding/vcpkg/packages/ompl_arm64-osx/debug/lib/libompl.dylib
+            unlink /Users/runner/work/path-finding/path-finding/vcpkg/packages/ompl_arm64-osx/debug/lib/libompl.dylib.18
+            cp /Users/runner/work/path-finding/path-finding/vcpkg/packages/ompl_arm64-osx/debug/lib/libompl.1.7.0.dylib /Users/runner/work/path-finding/path-finding/vcpkg/packages/ompl_arm64-osx/debug/lib/libompl.dylib
+            cp /Users/runner/work/path-finding/path-finding/vcpkg/packages/ompl_arm64-osx/debug/lib/libompl.1.7.0.dylib /Users/runner/work/path-finding/path-finding/vcpkg/packages/ompl_arm64-osx/debug/lib/libompl.dylib.18
+
+          CIBW_BEFORE_BUILD_LINUX: |
+            yum install -y curl zip tar unzip epel-release cmake make gcc-c++ bzip2 wget git zip unzip tar perl-IPC-Cmd autoconf libtool intltool automake autoconf-archive gettext
+            git clone https://github.com/microsoft/vcpkg.git
+            ./vcpkg/bootstrap-vcpkg.sh
+            ./vcpkg/vcpkg install octomap
+            ./vcpkg/vcpkg install ompl
+            unlink /project/vcpkg/packages/ompl_x64-linux/lib/libompl.so
+            unlink /project/vcpkg/packages/ompl_x64-linux/lib/libompl.so.18
+            cp /project/vcpkg/packages/ompl_x64-linux/lib/libompl.so.1.7.0 /project/vcpkg/packages/ompl_x64-linux/lib/libompl.so.18
+            cp /project/vcpkg/packages/ompl_x64-linux/lib/libompl.so.1.7.0 /project/vcpkg/packages/ompl_x64-linux/lib/libompl.so.18
+
           CIBW_ENVIRONMENT_LINUX: CMAKE_TOOLCHAIN_FILE="vcpkg/scripts/buildsystems/vcpkg.cmake"
           CIBW_ENVIRONMENT_MACOS: CMAKE_TOOLCHAIN_FILE="vcpkg/scripts/buildsystems/vcpkg.cmake"
           CIBW_SKIP: "cp*-manylinux_i686 cp*-musllinux* cp*-win32" 
