--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -41,10 +41,6 @@ jobs:
             ./vcpkg/bootstrap-vcpkg.sh
             ./vcpkg/vcpkg install octomap
             ./vcpkg/vcpkg install ompl
-            unlink /Users/runner/work/path-finding/path-finding/vcpkg/packages/ompl_arm64-osx/debug/lib/libompl.dylib
-            unlink /Users/runner/work/path-finding/path-finding/vcpkg/packages/ompl_arm64-osx/debug/lib/libompl.dylib.18
-            cp /Users/runner/work/path-finding/path-finding/vcpkg/packages/ompl_arm64-osx/debug/lib/libompl.1.7.0.dylib /Users/runner/work/path-finding/path-finding/vcpkg/packages/ompl_arm64-osx/debug/lib/libompl.dylib
-            cp /Users/runner/work/path-finding/path-finding/vcpkg/packages/ompl_arm64-osx/debug/lib/libompl.1.7.0.dylib /Users/runner/work/path-finding/path-finding/vcpkg/packages/ompl_arm64-osx/debug/lib/libompl.dylib.18
 
           CIBW_BEFORE_BUILD_LINUX: |
             yum install -y curl zip tar unzip epel-release cmake make gcc-c++ bzip2 wget git zip unzip tar perl-IPC-Cmd autoconf libtool intltool automake autoconf-archive gettext
@@ -52,13 +48,9 @@ jobs:
             ./vcpkg/bootstrap-vcpkg.sh
             ./vcpkg/vcpkg install octomap
             ./vcpkg/vcpkg install ompl
-            unlink /project/vcpkg/packages/ompl_x64-linux/lib/libompl.so
-            unlink /project/vcpkg/packages/ompl_x64-linux/lib/libompl.so.18
-            cp /project/vcpkg/packages/ompl_x64-linux/lib/libompl.so.1.7.0 /project/vcpkg/packages/ompl_x64-linux/lib/libompl.so.18
-            cp /project/vcpkg/packages/ompl_x64-linux/lib/libompl.so.1.7.0 /project/vcpkg/packages/ompl_x64-linux/lib/libompl.so.18
-
-          CIBW_ENVIRONMENT_LINUX: CMAKE_TOOLCHAIN_FILE="vcpkg/scripts/buildsystems/vcpkg.cmake"
-          CIBW_ENVIRONMENT_MACOS: CMAKE_TOOLCHAIN_FILE="vcpkg/scripts/buildsystems/vcpkg.cmake"
+            
+          CIBW_ENVIRONMENT_LINUX: CMAKE_TOOLCHAIN_FILE="vcpkg/scripts/buildsystems/vcpkg.cmake" LD_LIBRARY_PATH="$LD_LIBRARY_PATH:/project/vcpkg/packages/ompl_x64-linux/lib/"
+          CIBW_ENVIRONMENT_MACOS: CMAKE_TOOLCHAIN_FILE="vcpkg/scripts/buildsystems/vcpkg.cmake" DYLD_LIBRARY_PATH="$DYLD_LIBRARY_PATH:/project/vcpkg/packages/ompl_x64-linux/lib/"
           CIBW_SKIP: "cp*-manylinux_i686 cp*-musllinux* cp*-win32" 
 
       - uses: actions/upload-artifact@v4
