build: use `RPATH` during the initial python binding build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,11 @@ find_package(octomap REQUIRED)
 find_package(pybind11 REQUIRED)
 
 pybind11_add_module(pathfinder ${sources})
+
+set_target_properties(pathfinder PROPERTIES
+    INSTALL_RPATH "$ORIGIN"
+    BUILD_WITH_INSTALL_RPATH TRUE
+)
 target_link_libraries(
     pathfinder
     PRIVATE octomap
